--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
         <configuration>
           <optimize>true</optimize>
           <source>1.8</source>
