--- a/tribestream-api-registry-webapp/src/main/static/bower.json
+++ b/tribestream-api-registry-webapp/src/main/static/bower.json
@@ -17,7 +17,9 @@
     "angular-resource": "1.5.5",
     "js-base64": "~2.1.9",
     "montserrat-webfont": "^1.0.3",
-    "lato": "^0.3.0"
+    "lato": "^0.3.0",
+    "angular-ui-codemirror": "~0.3.0",
+    "angular-marked": "^1.2.2"
   },
   "resolutions": {
     "angular": "1.5.5"
