--- a/tribestream-api-registry-webapp/pom.xml
+++ b/tribestream-api-registry-webapp/pom.xml
@@ -21,7 +21,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.tomitribe.tribestream</groupId>
+    <groupId>org.tomitribe.tribestream</groupId>
     <artifactId>tribestream-api-registry-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
@@ -162,21 +162,28 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.openejb</groupId>
+      <groupId>org.apache.tomee</groupId>
       <artifactId>tomee-catalina</artifactId>
       <version>${version.tomee}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.openejb</groupId>
+      <groupId>org.apache.tomee</groupId>
       <artifactId>tomee-jaxrs</artifactId>
       <version>${version.tomee}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.openejb</groupId>
+      <groupId>org.apache.tomee</groupId>
       <artifactId>openejb-cxf-rs</artifactId>
+      <version>${version.tomee}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-rs-client</artifactId>
+      <version>3.1.7</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.tomcat</groupId>
@@ -266,7 +273,7 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.openejb.maven</groupId>
+        <groupId>org.apache.tomee.maven</groupId>
         <artifactId>tomee-maven-plugin</artifactId>
         <version>${version.tomee}</version>
         <configuration>
@@ -275,10 +282,8 @@
           <config>src/main/tomee/conf</config>
           <context>registry</context>
           <tomeeVersion>${version.tomee}</tomeeVersion>
-          <tomeeClassifier>plus</tomeeClassifier>
           <tomeeHttpPort>8080</tomeeHttpPort>
           <tomeeAjpPort>9009</tomeeAjpPort>
-          <tomeeHttpsPort>9443</tomeeHttpsPort>
           <tomeeShutdownPort>9005</tomeeShutdownPort>
           <systemVariables>
             <org.apache.openejb.cxf.bus.features>org.apache.cxf.feature.LoggingFeature</org.apache.openejb.cxf.bus.features>
