REG-121 testing component

--- a/tribestream-api-registry-webapp/src/main/static/bower.json
+++ b/tribestream-api-registry-webapp/src/main/static/bower.json
@@ -19,7 +19,9 @@
     "montserrat-webfont": "^1.0.3",
     "lato": "^0.3.0",
     "angular-ui-codemirror": "~0.3.0",
-    "angular-marked": "^1.2.2"
+    "angular-marked": "^1.2.2",
+    "mocha": "^3.0.2",
+    "chai": "^3.5.0"
   },
   "resolutions": {
     "angular": "1.5.5"
