--- a/tribestream-api-registry-webapp/pom.xml
+++ b/tribestream-api-registry-webapp/pom.xml
@@ -347,7 +347,7 @@
               <goal>gulp</goal>
             </goals>
             <configuration>
-              <arguments>build-with-tests</arguments>
+              <arguments>build</arguments>
             </configuration>
           </execution>
         </executions>
