moving auto provisioning from classpath in test since it doesn't belong to the product (or should be from a folder) + removing custom security filter to rely on tomcat

--- a/tribestream-api-registry-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/tribestream-api-registry-webapp/src/main/webapp/WEB-INF/web.xml
@@ -19,10 +19,12 @@
   ~ under the License.
   ~
   -->
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+<web-app version="3.1"
+         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         version="3.0">
+         xsi:schemaLocation="
+          http://xmlns.jcp.org/xml/ns/javaee
+		  http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
   <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>/app/*</url-pattern>
@@ -41,4 +43,27 @@
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
 
+  <login-config>
+    <auth-method>BASIC</auth-method>
+    <realm-name>Tribestream API Registry</realm-name>
+  </login-config>
+
+  <security-constraint> <!-- note that we could use shiro to have a better control over permissions but good enough for now -->
+    <auth-constraint>
+      <role-name>**</role-name>
+      <description>We just need an authenticated user</description>
+    </auth-constraint>
+    <web-resource-collection>
+      <web-resource-name>Application Endpoint</web-resource-name>
+      <url-pattern>/api/application/*</url-pattern>
+    </web-resource-collection>
+    <web-resource-collection>
+      <web-resource-name>Registry (deprecated)</web-resource-name>
+      <url-pattern>/api/registry/*</url-pattern>
+    </web-resource-collection>
+    <web-resource-collection>
+      <web-resource-name>Search</web-resource-name>
+      <url-pattern>/api/search/*</url-pattern>
+    </web-resource-collection>
+  </security-constraint>
 </web-app>
