--- a/tribestream-api-registry-webapp/src/main/static/bower.json
+++ b/tribestream-api-registry-webapp/src/main/static/bower.json
@@ -22,7 +22,8 @@
     "angular-marked": "^1.2.2",
     "mocha": "^3.0.2",
     "chai": "^3.5.0",
-    "simplemde": "^1.11.2"
+    "simplemde": "^1.11.2",
+    "highlightjs": "^9.6.0"
   },
   "resolutions": {
     "angular": "1.5.5"
