--- a/tribestream-api-registry-webapp/pom.xml
+++ b/tribestream-api-registry-webapp/pom.xml
@@ -19,6 +19,10 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <properties>
+    <orientdb.version>2.2.10</orientdb.version>
+    <deltaspike.version>1.7.1</deltaspike.version>
+  </properties>
 
   <parent>
     <groupId>org.tomitribe.tribestream</groupId>
@@ -86,6 +90,29 @@
       <artifactId>tomcat-catalina</artifactId>
       <version>${version.tomcat}</version>
       <scope>provided</scope>
+    </dependency>
+
+    <!-- for now test in embedded mode, we'll use remote api later -->
+    <dependency>
+      <groupId>com.orientechnologies</groupId>
+      <artifactId>orientdb-object</artifactId>
+      <version>${orientdb.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.orientechnologies</groupId>
+      <artifactId>orientdb-core</artifactId>
+      <version>${orientdb.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.deltaspike.core</groupId>
+      <artifactId>deltaspike-core-api</artifactId>
+      <version>${deltaspike.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.deltaspike.core</groupId>
+      <artifactId>deltaspike-core-impl</artifactId>
+      <version>${deltaspike.version}</version>
     </dependency>
 
     <dependency>
