--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,7 @@
   under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -31,7 +29,7 @@
 
   <groupId>org.tomitribe.tribestream</groupId>
   <artifactId>tribestream-api-registry-parent</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.03</version>
   <packaging>pom</packaging>
 
   <name>Tribestream API Registry :: Parent</name>
@@ -40,7 +38,7 @@
     <connection>scm:git:git@github.com:tomitribe/tribestream-api-registry.git</connection>
     <url>scm:git:git@github.com:tomitribe/tribestream-api-registry.git</url>
     <developerConnection>scm:git:git@github.com:tomitribe/tribestream-api-registry.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>tribestream-api-registry-parent-0.03</tag>
   </scm>
 
   <prerequisites>
