--- a/tribestream-api-registry-webapp/src/main/static/package.json
+++ b/tribestream-api-registry-webapp/src/main/static/package.json
@@ -25,6 +25,7 @@
     "gulp-typescript": "2.13.6",
     "gulp-uglify": "1.5.3",
     "gulp-watch": "4.3.8",
+    "gulp-insert": "0.5.0",
     "jasmine": "2.4.1",
     "jasmine-core": "2.4.1",
     "karma": "0.13.22",
