--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,7 @@
         <configuration>
           <forkCount>1</forkCount>
           <reuseForks>true</reuseForks>
+          <trimStackTrace>false</trimStackTrace>
         </configuration>
       </plugin>
 
