--- a/tribestream-api-registry-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/tribestream-api-registry-webapp/src/main/webapp/WEB-INF/web.xml
@@ -65,5 +65,21 @@
       <web-resource-name>Search</web-resource-name>
       <url-pattern>/api/search/*</url-pattern>
     </web-resource-collection>
+    <web-resource-collection>
+      <web-resource-name>Search</web-resource-name>
+      <url-pattern>/api/history/*</url-pattern>
+    </web-resource-collection>
+    <web-resource-collection>
+      <web-resource-name>Search</web-resource-name>
+      <url-pattern>/api/server/*</url-pattern>
+    </web-resource-collection>
+    <web-resource-collection>
+      <web-resource-name>Search</web-resource-name>
+      <url-pattern>/api/ui/*</url-pattern>
+    </web-resource-collection>
+    <web-resource-collection>
+      <web-resource-name>Search</web-resource-name>
+      <url-pattern>/api/health</url-pattern>
+    </web-resource-collection>
   </security-constraint>
 </web-app>
