--- a/pom.xml
+++ b/pom.xml
@@ -382,6 +382,11 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>external.atlassian.jgitflow</groupId>
+        <artifactId>jgitflow-maven-plugin</artifactId>
+        <version>1.0-m5.1</version>
+      </plugin>
     </plugins>
   </build>
 
